[package]
name = "bevy_tasks"
version = "0.14.0"
edition = "2021"
description = "A task executor for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
multi_threaded = ["dep:async-channel", "dep:concurrent-queue"]

[dependencies]
futures-lite = "2.0.1"
async-task = "4.4.0"
pin-project-lite = "0.2"
slab = "0.4.7"
async-channel = { version = "2.2.0", optional = true }
async-io = { version = "2.0.0", optional = true }
concurrent-queue = { version = "2.0.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[dev-dependencies]
web-time = { version = "1.1" }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true
