[package]
name = "bevy_tasks"
version = "0.16.0"
edition = "2024"
description = "A task executor for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
# Functionality

## Enables multi-threading support.
## Without this feature, all tasks will be run on a single thread.
multi_threaded = ["dep:async-channel", "dep:concurrent-queue"]

# Platform Compatibility

## Allows access to the `std` crate. Enabling this feature will prevent compilation
## on `no_std` targets, but provides access to certain additional features on
## supported platforms.
std = ["futures-lite/std", "async-task/std", "bevy_platform/std"]

## `critical-section` provides the building blocks for synchronization primitives
## on all platforms, including `no_std`.
critical-section = ["bevy_platform/critical-section"]

## Enables use of browser APIs.
## Note this is currently only applicable on `wasm32` architectures.
web = ["bevy_platform/web", "dep:wasm-bindgen-futures", "dep:futures-channel"]

[dependencies]
bevy_platform = { path = "../bevy_platform", version = "0.16.0", default-features = false, features = [
  "alloc",
] }

futures-lite = { version = "2.0.1", default-features = false, features = [
  "std",
  "alloc",
] }
async-task = { version = "4.4.0", default-features = false, features = ["std"] }
pin-project-lite = "0.2"
slab = "0.4.9"
cfg-if = "1.0.0"
async-channel = { version = "2.3.0", optional = true }
async-io = { version = "2.0.0", optional = true }
concurrent-queue = { version = "2.0.0", optional = true }
atomic-waker = { version = "1", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false, features = [
  "alloc",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4", optional = true }
futures-channel = { version = "0.3", optional = true }

[target.'cfg(not(all(target_has_atomic = "8", target_has_atomic = "16", target_has_atomic = "32", target_has_atomic = "64", target_has_atomic = "ptr")))'.dependencies]
async-task = { version = "4.4.0", default-features = false, features = [
  "portable-atomic",
] }
heapless = { version = "0.8", default-features = false, features = [
  "portable-atomic",
] }
atomic-waker = { version = "1", default-features = false, features = [
  "portable-atomic",
] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
